@@ -1,15 +1,0 @@
-#ifndef __MALLOC_H__
-#define __MALLOC_H__
-/*
- *  Copyright (C) 2006 by Filip Brcic <brcha@users.sourceforge.net>
- *
- *  This file is part of OOMTK
- */
-/** @file
- * @brief Malloc stub, for supc++ library
- */
-
-void * malloc (size_t size) {};
-void free (void * what) {};
-
-#endif /* __MALLOC_H__ */
