@@ -1,0 +1,12 @@
+/*
+ *  Copyright (C) $YEAR$ by $AUTHOR$ <$EMAIL$>
+ *
+ *  This file is part of OOMTK
+ */
+/** \file $MODULE$.cpp
+ * \brief Description
+ */
+/*
+ * $Id: $
+ */
+ 
